# hypercat

./: .gitignore  LICENSE  PSF_modeling.py  PSF_modeling_Example_Notebook.ipynb  README.md  bigfileops.py  hypercat.ipynb  hypercat.py  hypercat.yaml  hypercat_workflow.ipynb  index.html  ndiminterpolation_vectorized.py  padarray.py  params.json  pyproject.toml
.ipynb_checkpoints/: hypercat-checkpoint.ipynb  hypercat_workflow-checkpoint.ipynb
data/: instruments.csv  pupils.csv  pupils.json
data/pupils/: ELT_header.py  GMT.fits  JWST.fits  JWST_header.py  Keck.fits  TMT_header.py
docs/api/: html
docs/api/html/: docsapihtml.tgz  genindex.html  hypercat.html  index.html  ndiminterpolation_vectorized.html  objects.inv  padarray.html  py-modindex.html  search.html  searchindex.js
docs/api/html/_modules/: hypercat.html  index.html  ndiminterpolation_vectorized.html  padarray.html
docs/api/html/_sources/: index.txt  ndiminterpolation_vectorized.txt
docs/manual/: download-verification.org  get-hypercube-into-ram.org  hypercat-gui.org  hypercat_user_manual.org  installation.org  introduction.org  running.org
docs/notebooks/: Imaging.ipynb  Interferometry.ipynb  NGC1068.oifits  explortorusparam.ipynb  gettingstarted.ipynb  hypercatbasics.ipynb  hypercatbasics.json
examples/: 01-hypercat-basics.ipynb  02-hypercat-astro.ipynb  03-hypercat-singledish.ipynb  04-hypercat-morphology-intro.ipynb  05-hypercat-morphology-clumpy.ipynb  Burtscher13_Table6.csv  Circinus.json  Circinus_Burtscher_2013.oifits  Circinus_clean.oifits  HyperCAT_interferometry.ipynb  Instrument_list.csv  NGC1068_Interferometry.ipynb  PSF from 30-m telescopes.ipynb  PSF_MIRI_F1000W.fits  Tutorial_PSF_30m_Telescopes.ipynb  Tutorial_PSF_Convolution_using_30m_Telescope_PSF.ipynb  Untitled.ipynb  democube.json  democube_NGC1068_LR18.json  ngc1068.json  ngc1068_TMT.py  ngc1068_interferometry.py  subcube_ngc1068.json
examples/.ipynb_checkpoints/: PSF from 30-m telescopes-checkpoint.ipynb  PSF_modeling_Example_Notebook-checkpoint.ipynb  Tutorial_PSF_30m_Telescopes-checkpoint.ipynb
hypercat/: HyperCAT_interferometry.ipynb  bigfileops.py  caca.py  figIV.py  figV.py  figVI.py  hypercat.py  hypercatgui.py  imageops.py  instruments.py  interferometry.py  ioops.py  loggers.py  morphology.py  ndiminterpolation.py  obsmodes.py  plotting.py  psf.py  psf_real.py  units.py  utils.py
hypercat/.ipynb_checkpoints/: HyperCAT_interferometry-checkpoint.ipynb
hypercatgui/: hypercatgui.py
psf/: GMT_MASK.fits  GMT_header.py  Keck_PupilImage.fits
sphinx/: Makefile  bigfileops.rst  conf.py  hypercat.rst  imageops.rst  index.rst  instruments.rst  interferometry.rst  ioops.rst  make.bat  morphology.rst  padarray.rst  psf.rst  units.rst
sphinx/_build/html/: bigfileops.html  genindex.html  hypercat.html  imageops.html  index.html  instruments.html  ioops.html  loggers.html  morphology.html  ndiminterpolation.html  objects.inv  padarray.html  plotting.html  psf.html  py-modindex.html  search.html  searchindex.js  units.html  utils.html
sphinx/_build/html/_modules/: bigfileops.html  hypercat.html  imageops.html  index.html  instruments.html  ioops.html  loggers.html  morphology.html  ndiminterpolation.html  padarray.html  plotting.html  psf.html  units.html  utils.html
sphinx/_build/html/_sources/: bigfileops.rst.txt  imageops.rst.txt  index.rst.txt  ioops.rst.txt  loggers.rst.txt  ndiminterpolation.rst.txt  plotting.rst.txt  psf.rst.txt  utils.rst.txt
tests/: README.md  testnotebooks.ipynb  testnotebooks.py
(+1 files in other folders)
