[tool.poetry]
name = "hypercat"
version = "0.1.2"
description = "Hypercube of clumpy AGN tori"
authors = ["Robert Nikutta <robert.nikutta@gmail.com>", "Enrique Lopez-Rodriguez", "Kohei Ichikawa"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = ""
repository = "https://github.com/rnikutta/hypercat"
keywords = ["astronomy","active galactic nuclei","hypercubes","extremely large telescopes","morphology"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy"
]

[tool.poetry.dependencies]
python = ">=3.6"
numpy = ">=1.16.2"
scipy = ">=1.2.1"
scikit-image = ">=0.15.0"
astropy = ">=3.1.2"
urwid = ">=2.0.1"
h5py = "2.9.0"
matplotlib = ">=3.0.3"

[tool.poetry.dev-dependencies]

[tool.poetry.urls]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
